@@ -4,8 +4,8 @@
 # Pandora FMS Network Server
 # http://www.pandorafms.com
 ##########################################################################
-# Copyright (c) 2006-2008 Sancho Lerena, slerena@gmail.com
-#           (c) 2006-2008 Artica Soluciones Tecnologicas S.L
+# Copyright (c) 2006-2009 Sancho Lerena, slerena@gmail.com
+#           (c) 2006-2009 Artica Soluciones Tecnologicas S.L
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -57,6 +57,12 @@ pandora_init(\%pa_config, "Pandora FMS Network Server");
 
 # Read config file for Global variables
 pandora_loadconfig (\%pa_config,1);
+
+# Check for snmpget
+if (! -e $pa_config{"snmpget"}) {
+	print " [E] ".$pa_config{"snmpget"}." not found. Pandora FMS Network cannot run without it.\n\n";
+	exit;
+} 
 
 # Audit server starting
 pandora_audit (\%pa_config, "Pandora FMS Network Daemon starting", "SYSTEM", "System");
@@ -475,7 +481,10 @@ sub pandora_query_snmp (%$$$$$) {
 	my $snmp_retries = $pa_config->{'snmp_checks'};
 
 	$_[5] = 0;
-	my $output = `snmpget -v $snmp_version -r $snmp_retries -t $snmp_timeout -OUevqt -c $snmp_community $snmp_target $snmp_oid`;
+	
+	my $snmpget_cmd = $pa_config->{"snmpget"};
+	my $output = `$snmpget_cmd -v $snmp_version -r $snmp_retries -t $snmp_timeout -OUevqt -c $snmp_community $snmp_target $snmp_oid`;
+
 	if ($output eq ""){
 		$_[5] = 1;
 	}
